--- a/client/main.css
+++ b/client/main.css
@@ -4,11 +4,21 @@ body {
   font-family: sans-serif;
 }
 .table-header {
-  background-color: #aa0000;
+  background-color: #5cb85c;
   font-weight: bold;
+  clear: both;
+  float: left;
+  display: inline-block;
   border: 1px solid gray;
+  width: 100%;
 }
 
+.scroll-container {
+  width: 100%;
+  height: 600px;
+  overflow-x: scroll;
+  overflow-y: scroll;
+}
 .table-row {
     content: "";
     clear: both;
@@ -16,6 +26,7 @@ body {
     min-height: 1em;
     padding-top: 5px;
     padding-bottom: 5px;
+    border-bottom: solid #eeeeee 1px;
 }
 
 .table-row:hover {
@@ -25,7 +36,8 @@ body {
 .table-col {
     float: left;
     display: block;
-    width: 20%;
+    min-height: 1px;
+    width: 15%;
 }
 
 .col-qty {
